tests/fixtures/invalid/type_errors/type_mismatch.luma
-- Type mismatch
let x: Number = "string"
